--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://rt126.github.io'
 languageCode = 'en-us'
-title = 'RT-126 World Meeting 2025'
+title = 'RT-126 Numbers Meeting 2025'
 
 [[module.imports]]
 path = "github.com/willfaught/paige"
